[package]
name = "server-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
chrono = { version = "0.4.23", features = ["serde"] }
futures-util = "0.3.25"
mime = "0.3.16"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.1", features = ["full"] }

[dev-dependencies]
serde_json = "1.0.91"
