[package]
name = "server-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
chrono = { version = "0.4.23", features = ["serde"] }
futures = "0.3.25"
hyper = "0.14.23"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.1", features = ["rt", "net", "macros", "full"] }
tower = "0.4.13"
